-- https://jpvillaisaza.co/2017/03/14/minimal-cabal-files/
cabal-version: >= 1.10

name: thing
version: 1.0.0
build-type: Simple

library
  exposed-modules: Thing
  build-depends: base
  default-language: Haskell2010

executable thing
  main-is: Main.hs
  build-depends: base, thing
  default-language: Haskell2010
